# Refactor-Django

./: .gitignore  README.md  pyproject.toml
roles/roles/: asgi.py  settings.py  urls.py  wsgi.py
roles/users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsets.py
roles/users/migrations/: 0001_initial.py
